# arcadia-tio-rs

./: .gitignore  AGENTS.md  Cargo.toml  Makefile.toml  README.md  RELEASE_NOTES.md
.cargo/: config.toml
crates/arcadia-tio-ocb-core/: Cargo.toml  README.md
crates/arcadia-tio-ocb-core/examples/: project_fixed_binary.rs
crates/arcadia-tio-ocb-core/src/: column_bundle.rs  error.rs  format.rs  lib.rs  read.rs
crates/arcadia-tio-rs/: Cargo.toml  README.md
crates/arcadia-tio-rs/examples/: ocb_roundtrip.rs  roundtrip.rs
crates/arcadia-tio-rs/examples/tutorials/: 01_quickstart_create_append_read.rs  02_layouts_reads_history.rs  03_coordinates_numeric.rs  04_coordinates_full_surface.rs  05_sparse_append.rs  06_mutation_history_universe.rs  07_reform_compaction_diagnostics.rs  08_compression_interop.rs  09_tensor_ops_conversions.rs
crates/arcadia-tio-rs/src/: lib.rs
crates/arcadia-tio-rs/tests/: dependency_boundary.rs  ocb.rs  roundtrip.rs
crates/arcadia-tio-sys/: Cargo.toml  README.md  build.rs
crates/arcadia-tio-sys/src/: lib.rs
crates/arcadia-tio-sys/tests/: constants.rs  smoke.rs
docs/agent/: README.md
examples/tutorials/run/: run_rust.sh  with_native_lib.sh
