[workspace]
members = [
    "crates/arcadia-tio-sys",
    "crates/arcadia-tio-rs",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.92"
license = "MIT"
repository = "https://github.com/Jacobbishopxy/arcadia-tio-rs"
homepage = "https://github.com/Jacobbishopxy/arcadia-tio-rs"
