[package]
name = "arcadia-tio-rs"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
license = "MIT"
repository = "https://github.com/Jacobbishopxy/arcadia-tio-rs"
homepage = "https://github.com/Jacobbishopxy/arcadia-tio-rs"
description = "Safe Rust wrapper over the Arcadia TIO C ABI binary library."

[lib]
path = "src/lib.rs"

[dependencies]
arcadia-tio-sys = { path = "../arcadia-tio-sys", version = "0.1.0" }

